// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`+++capturing Snapshot of NumericRangeInput 1`] = `
<div
  className="token test"
>
  <div
    className="dp-code label"
  >
    user-message
    :
  </div>
  <span
    className="value"
    onClick={[Function]}
  >
    12582912 MB to 20971520 MB
  </span>
  <div
    className="token-remove remove"
    onClick={[Function]}
  >
    X
  </div>
</div>
`;

exports[`+++capturing Snapshot of NumericRangeInput with custom convert 1`] = `
<div
  className="token test"
>
  <div
    className="dp-code label"
  >
    user-message
    :
  </div>
  <span
    className="value"
    onClick={[Function]}
  >
    12 MB to 20 MB
  </span>
  <div
    className="token-remove remove"
    onClick={[Function]}
  >
    X
  </div>
</div>
`;

exports[`+++capturing Snapshot of NumericRangeInput with empty value 1`] = `
<div
  className="token test"
>
  <div
    className="dp-code label"
  >
    user-message
    :
  </div>
  <span
    className="value"
    onClick={[Function]}
  >
    __ MB to __ MB
  </span>
  <div
    className="token-remove remove"
    onClick={[Function]}
  >
    X
  </div>
</div>
`;
